# rust-ffi-benchmarks

./: Cargo.toml  README.md  build.rs  run_benchmark.sh
benches/: bench_ffi.rs
src/: benchmark.cpp  benchmark.h  lib.rs
