[package]
name = "ffi-benchmark"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jschwe/rust-ffi-benchmarks"

[dependencies]
cxx = "1.0"
criterion = { version = "0.5.1", features = ["html_reports"]}

[build-dependencies]
cxx-build = "1.0"

[[bench]]
name = "bench_ffi"
harness = false

[profile.bench]
lto = "thin"